--- a/snake/index.html
+++ b/snake/index.html
@@ -1,24 +1,20 @@
-body {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    background-color: #333;
-    color: #fff;
-    font-family: monospace;
-}
-.game-container {
-    text-align: center;
-}
-canvas {
-    background: #000;
-    border: 2px solid #fff;
-}
-.controls {
-    margin-top: 1rem;
-}
-button {
-    padding: 10px 20px;
-    font-size: 1rem;
-    margin: 5px;
-}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Snake Game</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <div class="game-container">
+        <h1>Snake Game</h1>
+        <canvas id="gameCanvas" width="400" height="400"></canvas>
+        <div class="controls">
+            <button onclick="startGame()">Start</button>
+            <button onclick="window.location.href='../index.html'">Back to Home</button>
+        </div>
+    </div>
+    <script src="snake.js"></script>
+</body>
+</html>
