--- a/flappybird/index.html
+++ b/flappybird/index.html
@@ -10,6 +10,7 @@
     <div class="game-container">
         <h1>Flappy Bird</h1>
         <canvas id="gameCanvas" width="288" height="512"></canvas>
+        <div id="score">Score: 0</div>
         <button onclick="startGame()">Start Game</button>
         <button onclick="window.location.href='../index.html'">Back to Home</button>
     </div>
