--- a/snake/index.html
+++ b/snake/index.html
@@ -10,6 +10,7 @@
     <div class="game-container">
         <h1>Snake Game</h1>
         <canvas id="gameCanvas" width="400" height="400"></canvas>
+        <div id="score">Score: 0</div>
         <div class="controls">
             <button onclick="startGame()">Start</button>
             <button onclick="window.location.href='../index.html'">Back to Home</button>
